# Indic-native

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  build.gradle
core/: CMakeLists.txt
core/suggest/core/dictionary/: dictionary.h
core/suggest/core/layout/: proximity_info.cpp  proximity_info.h
core/suggest/core/result/: suggestion_results.cpp
src/suggest/core/dictionary/: dictionary.cpp
src/suggest/core/policy/: dictionary_structure_with_buffer_policy.h
src/suggest/core/result/: suggestion_results.h
src/suggest/core/session/: dic_traverse_session.h
wrapper/: com_android_inputmethod_keyboard_ProximityInfo.cpp  com_android_inputmethod_latin_DicTraverseSession.cpp
wrapper/transformed_core/suggest/core/dictionary/property/: word_property.cpp
